Fix argument passing AND more URLS